// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertThemedColorConfig > converts dark to light 1`] = `
{
  "accentPrimary": {
    "b": 117,
    "g": 117,
    "r": 117,
  },
  "background": {
    "b": 255,
    "g": 255,
    "r": 255,
  },
}
`;

exports[`convertThemedColorConfig > converts light to dark 1`] = `
{
  "accentPrimary": {
    "b": 117,
    "g": 117,
    "r": 117,
  },
  "background": {
    "b": 0,
    "g": 0,
    "r": 0,
  },
}
`;

exports[`convertThemedColorConfig > correctly interprets dark 1`] = `
{
  "accentPrimary": {
    "b": 255,
    "g": 255,
    "r": 255,
  },
  "background": {
    "b": 0,
    "g": 0,
    "r": 0,
  },
}
`;

exports[`convertThemedColorConfig > correctly interprets light 1`] = `
{
  "accentPrimary": {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  "background": {
    "b": 255,
    "g": 255,
    "r": 255,
  },
}
`;

exports[`convertThemedColorConfig converts dark to light 1`] = `
{
  "accentPrimary": {
    "b": 117,
    "g": 117,
    "r": 117,
  },
  "background": {
    "b": 255,
    "g": 255,
    "r": 255,
  },
}
`;

exports[`convertThemedColorConfig converts light to dark 1`] = `
{
  "accentPrimary": {
    "b": 117,
    "g": 117,
    "r": 117,
  },
  "background": {
    "b": 0,
    "g": 0,
    "r": 0,
  },
}
`;

exports[`convertThemedColorConfig correctly interprets dark 1`] = `
{
  "accentPrimary": {
    "b": 255,
    "g": 255,
    "r": 255,
  },
  "background": {
    "b": 0,
    "g": 0,
    "r": 0,
  },
}
`;

exports[`convertThemedColorConfig correctly interprets light 1`] = `
{
  "accentPrimary": {
    "b": 0,
    "g": 0,
    "r": 0,
  },
  "background": {
    "b": 255,
    "g": 255,
    "r": 255,
  },
}
`;

exports[`increaseForegroundContrast > should darken #E0634C in light mode 1`] = `"#d44025"`;

exports[`increaseForegroundContrast > should lighten #5D65EE in dark mode 1`] = `"#6b72ef"`;

exports[`increaseForegroundContrast should darken #E0634C in light mode 1`] = `"#d44025"`;

exports[`increaseForegroundContrast should lighten #5D65EE in dark mode 1`] = `"#6b72ef"`;
